namespace prototype.example;
public interface IShape
{
    void Draw();
    IShape Duplicate();
}