namespace prototype.example;
public class ShapeActions
{
    public IShape Duplicate(IShape shape)
    {
        return shape.Duplicate();
    }
}